--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "date-fns": "^2.30.0",
+    "ethers": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ethers": "^6.9.0"
+    "recharts": "^2.15.4",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
