--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.31.6",
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "ethers": "^6.9.0",
