--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.31.6",
-    "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "ethers": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.4",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13"
+    "@coinbase/onchainkit": "^0.31.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
